--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
               </li>
           
               <li class="nav-item">
-                <a class="nav-link" href="#services">services</a>
+                <a class="nav-link" href="#services">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#our team">our team</a>
+                <a class="nav-link" href="#our team">Our team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contact">contact</a>
+                <a class="nav-link" href="#contact">Contact</a>
               </li>
           </div>
         </div>
