--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- --navbar start -->
     <header id="home">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary px-4">
+      <nav class="navbar navbar-expand-lg navbar-light text-white fixed-top bg-body-tertiary px-4">
         <div class="container-fluid">
           <a class="navbar-brand fs-2" href="#">Techno- <span class="text-primary">web</span> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
